# Eval_Driven_Prompt_Optimisation_Agent

./: .gitignore  README.md  banking_complaint_class_keywords.py  banking_complaint_samples.py  banking_complaint_test_samples.py  banking_complaint_validation_samples.py  pyproject.toml
data/: banking_complaint_test_samples.py  banking_complaint_validation_samples.py
runs/: iteration_01.json  iteration_02.json  iteration_03.json  prompt_01_original_proposed.txt  prompt_01_proposed.txt  prompt_01_used.txt  prompt_02_original_proposed.txt  prompt_02_used.txt  prompt_03_original_proposed.txt  prompt_03_proposed.txt  prompt_03_used.txt  test_score.json
src/: agent.py  classifier.py  cli.py  evaluation.py  optimizer.py  prompts.py  schemas.py
src/promptopt_agent/: __init__.py  agent.py  classifier.py  cli.py  data_loader.py  evaluation.py  llm.py  optimizer.py  prompts.py  schemas.py  taxonomy.py
