[project]
name = "eval-driven-prompt-optimisation-agent"
version = "0.1.0"
description = "Iterative OpenAI LLM prompt optimisation agent for complaint classification."
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
promptopt-agent = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
    "agent",
    "classifier",
    "cli",
    "data_loader",
    "evaluation",
    "llm",
    "optimizer",
    "prompts",
    "schemas",
    "taxonomy",
]
